# marquee

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deploy.sh  marquee.toml.example
migrations/: 001_init.sql  002_add_budget_revenue_popularity.sql  003_add_daily_picks.sql  004_add_prompt_overrides.sql  005_add_persons.sql  006_add_settings.sql  007_tmdb_full_data.sql  008_add_users.sql  009_drop_prompt_overrides.sql  010_add_search_history.sql  011_add_prompt_overrides.sql  012_add_tmdb_fetch_version.sql  013_add_bilingual_columns.sql  014_add_benchmark.sql  015_add_share_token.sql  016_add_torrent_info.sql  017_add_media_dir_source.sql  018_add_torrent_media_type.sql  019_add_most_related_tips.sql  020_add_movie_ai_insights.sql  021_add_douban_imports.sql  022_add_benchmark_query_source.sql  023_add_keyword_translations.sql  024_add_overview_zh_source.sql  025_index_dir_movie_mappings_movie_id.sql  026_add_not_expected_ids.sql
prompts/: inspire.en.md  inspire.md  keyword-translate.en.md  keyword-translate.md  most-related-tip.en.md  most-related-tip.md  movie-insight.md  overview-translate.en.md  overview-translate.md  person-pick.en.md  person-pick.md  query-classify.en.md  query-classify.md  query-understand.en.md  query-understand.md  recommend-filter.en.md  recommend-filter.md  recommend-pick.en.md  recommend-pick.md  smart-rank.en.md  smart-rank.md
src/: config.rs  main.rs  static_files.rs  test_support.rs
src/api/: auth.rs  benchmark.rs  common.rs  corrections.rs  marks.rs  (+7 more)
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+76 files in other folders)
