[package]
name = "marquee"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
strsim = "0.11"
figment = { version = "0.10", features = ["toml", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-cron-scheduler = "0.13"
rust-embed = "8"
mime_guess = "2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
once_cell = "1"
toml = "0.8"
tokio-stream = "0.1"
futures = "0.3"
rand = "0.10.0"
fastembed = "5"
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"
argon2 = "0.5"
jsonwebtoken = "9"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
